--- a/Hello-World/index.html
+++ b/Hello-World/index.html
@@ -6,6 +6,8 @@
     <title>Hello World</title>
 </head>
 <body>
-    <p>Hello World !</p>
+<center>
+    <h1>Hello World !</h1>
+</center>
 </body>
 </html>
