Adicionando Profile CSS Flexbox

--- a/5 -  Layout com CSS Flexbox/index.html
+++ b/5 -  Layout com CSS Flexbox/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="profile">
-        <img src="/eu.jpeg" alt="Photo-Profile">
+        <img src="/Me.jpeg" alt="Photo-Profile">
         <h2>Wallax Figueiredo</h2>
 
         <p>I am Wallax Figueiredo, born in Bahia, Brazil, investor, self-taught, entrepreneur, married, father of 2
