--- a/12 - Lista de Usúario Aprimorada/public/index.html
+++ b/12 - Lista de Usúario Aprimorada/public/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React Navigation</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<html lang="pt">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+ <!-- Adicionando descrição para aumentar a qualidade do SEO -->
+  <meta name="description" content="Author W. S. Figueiredo" />
+  <title>Lista de Pokémons</title>
+
+  <!--Adicionando TAG de pré-ligação , para melhorar o desempenho da apliçação-->
+  <link rel="preconnect" href="https://pokeapi.co/api/v2/pokemon?limit=20">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
